css/style.css
*:focus {
    outline: none;
}
/*HEADER STYLES*/
header {
    margin: 15px;
    padding: 5px;
}
a {
    text-decoration: none;
    color: #737373;
}

header nav li button {
    border: none;
    color: white;
    text-align: center;
    text-decoration: none;
    background-color: #4082EE;
    width: 70px;
    height: 30px;
    font-size: 10px;
    border-radius: 10%;
}

header nav ul {
    display: grid;
    grid-template-columns: 1fr 1fr 10fr 1fr 1fr 1fr 1fr;
    align-items: center;
}

header nav ul li {
    margin-left: auto;
    margin-right: auto;
}

#box-grid-div {
    width: 20px;
    height: 20px;
    display: grid;
    grid-template-rows: 1fr 1fr 1fr;
    grid-template-columns: 1fr 1fr 1fr;
}

.box {
    content: " ";
    width: 6px;
    height: 6px;
    background-color: #737373;
}

/*MAIN STYLES*/
main {
    margin-top: 150px;
    margin-bottom: auto;
    height: 100%;
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: space-evenly;
    flex: 1 1 auto;
}

main img {
    width: 30%;
    height: auto;
    padding-top: 10px;
    margin-bottom: 25px;
}

#search-div {
    display: flex;
    justify-content: center;
    width: 100%;
}

#search-bar {
    width: 40%;
    border-style: solid;
    border-left-style: none;
    border-right-style: none;
    border-width: 1px;
    border-color: lightgrey;
}

#search-bar:focus {
    outline: none;
}

#search-div::before {
    content: " ";
    display: inline-block;
    width: 30px;
    height: 30px;
    border-style: solid none solid solid;
    border-width: 1px;
    border-color: lightgrey;
    background-color: white;
    border-top-left-radius: 50%;
    border-bottom-left-radius: 50%;
}

#search-div::after {
    content: " ";
    display: inline-block;
    width: 30px;
    height: 30px;
    border-style: solid solid solid none;
    border-width: 1px;
    border-color: lightgrey;
    background-color: white;
    border-top-right-radius: 50%;
    border-bottom-right-radius: 50%;
}

main div {
    margin-top: 10px;
}

main div button {
    border: none;
    border-radius: 10px;
    margin-right: 20px;
    margin-left: 20px;
    height: 35px;
    padding: 5px 10px;
    background-color: #F3F3F3;
}

p a {
    color: blue;
    font-size: 15px;
    margin-top: 10px;
    display: inline-block;
}

/*FOOTER STYLES*/
footer {
    position: absolute;
    bottom: 0px;
    width: 100%;
    background-color: #F2F2F2;
    height: 5%;
}

footer nav {
    margin: auto auto;
    height: 100%;
}

footer nav ul {
    padding-top: 20px;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 3fr 1fr 1fr 1fr;
    justify-content: space-around;
}

footer nav ul li {
    margin: auto auto;
}

